# fastapi-repo-chat-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  WALKTHROUGH.md  docker-compose.monolith.yml  docker-compose.yml  pyproject.toml  requirements.txt  shared.env.example
api-gateway/: .env.example  Dockerfile
api-gateway/app/: config.py  main.py  schemas.py  state.py
api-gateway/app/routers/: agents.py  chat.py  graph.py  index.py
api-gateway/app/services/: graph.py  health.py  indexer.py  orchestrator.py
code-analyst-agent/: .env.example  Dockerfile  code_analyst_mcp.py
code-analyst-agent/app/: config.py  models.py
code-analyst-agent/app/graph/: driver.py
code-analyst-agent/app/utils/: analysis.py  llm.py  patterns.py  snippet.py
graph-query-agent/: Dockerfile  graph_query_mcp.py
graph-query-agent/app/: config.py  schema.py
graph-query-agent/app/graph/: driver.py  query.py
indexer-agent/: .env.example  Dockerfile  indexer_mcp.py
indexer-agent/app/: config.py
indexer-agent/app/graph/: driver.py
indexer-agent/app/indexing/: ast_parser.py  entity_extractor.py  file_indexer.py  repo_manager.py
orchestrator-agent/: .env.example  Dockerfile  orchestrator_mcp.py
orchestrator-agent/app/: config.py  llm.py  models.py
orchestrator-agent/app/clients/: base.py  code_agent.py  errors.py  graph_agent.py
orchestrator-agent/app/memory/: models.py  policies.py  store.py
orchestrator-agent/app/routing/: intent.py  router.py
orchestrator-agent/app/synthesis/: synthesizer.py
